<resources>
    <string name="app_name">SOLASITOS</string>
    <string name="titulo_inicioSesion">LOG IN</string>
    <string name="user">Username</string>
    <string name="pwd">Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="wellcome">WELLCOME TO SOLASITOS</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="yaExiste">This user already exists</string>
    <string name="language">Language</string>
    <string name="langSummary">Select your language</string>
    <string name="players">Players</string>
    <string name="empty">Error: Empty fields</string>
    <string name="cancel">CANCEL</string>
    <string name="messageDialog">The user entered does not exist</string>
    <string name="POR">Goalkeeper</string>
    <string name="DEF">Defender</string>
    <string name="MID">Midfielder</string>
    <string name="DEL">Striker</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="basque">Basque</string>
    <string name="comments">COMMENTS</string>
    <string name="succesfully">Succesfully loged up</string>
    <string name="saveComment">Save comment</string>
    <string name="loadComment">Load comments</string>
    <string name="writeComment">Write your comment here</string>
</resources>